<resources>
    <string name="app_name">Infinity - Course Project</string>
    <string name="routines_order_by_name">Name</string>
    <string name="routines_order_by_total_time">Total Time</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>
    <string name="s_for_sunday">S</string>
    <string name="m_for_monday">M</string>
    <string name="t_for_tuesday">T</string>
    <string name="w_for_wednesday">W</string>
    <string name="t_for_thursday">T</string>
    <string name="f_for_friday">F</string>
    <string name="s_for_saturday">S</string>
    <string name="title_activity_routines_add">Add Routine</string>
    <string name="add_routine_title">Title:</string>
    <string name="add_routine_title_hint">e.g. MondayRoutine</string>
    <string name="add_routine_weekdays">Weekdays:</string>
    <string name="add_routine_start_time">Start Time:</string>
    <string name="add_routine_total_time">Total Time:</string>
    <string name="twenty_four_hours_hint">24h</string>
    <string name="zero_minutes_hint">00m</string>
    <string name="add_routine_periods">Periods:</string>
    <string name="done_button_text">Done</string>
    <string name="back_button_text"><![CDATA[<— Back]]></string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="add_period_fab_content_description">button for adding periods</string>
    <string name="toast_empty_title">Enter a title.</string>
    <string name="add_routine_fab_content_description">Button for adding routine</string>
    <string name="period_course_text">Course:</string>
    <string name="period_study_text">Study Time:</string>
    <string name="period_break_text">Break Time:</string>
    <string name="sunday_short_form">Sun</string>
    <string name="monday_short_form">Mon</string>
    <string name="tuesday_short_form">Tues</string>
    <string name="wed_short_form">Wed</string>
    <string name="thurs_short_form">Thurs</string>
    <string name="fri_short_form">Fri</string>
    <string name="sat_short_form">Sat</string>
    <string name="delete_button_text">Delete</string>
    <string name="routine_show_text">Show:</string>
    <string name="master_routine_text">Master Routine:</string>
    <string name="assignment_due_date_text">Due:</string>
    <string name="assignment_title_hint">e.g. Assignment 1</string>
    <string name="add_assignment_description_text">Description:</string>
    <string name="add_assignment_fab_content_description">Button for adding assignment</string>
    <string name="add_assignment_due_date_text">Due Date:</string>
    <string name="add_assignment_due_time_text">Due Time:</string>
    <string name="add_assignment_due_date_confirmation_statement">Assign a due date to this assignment.</string>
    <string name="add_assignment_upcoming_date_confirmation_statement">Notify me prior to this assignment\'s due date.</string>
    <string name="add_assignment_notify_me_text">Notify me</string>
    <string name="add_assignment_days_prior_text">days prior</string>
    <string name="year_hint">yyyy</string>
    <string name="slash_symbol_between_day_month_year">/</string>
    <string name="month_hint">mm</string>
    <string name="day_hint">dd</string>
    <string name="toast_invalid_date">Enter a valid date.</string>
    <string name="toast_past_date">Enter a future date.</string>
    <string name="add_assignment_mark_assignment_completed_checkbox_text">Mark this assignment as completed.</string>
    <string name="enter_a_complete_date">Enter a complete date.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_title">My Study</string>
    <string name="nav_subtitle">Routine</string>
    <string name="menu_assignments">Assignments</string>
    <string name="menu_routines">Routines</string>
    <string name="title_already_exists">Title already exists.</string>
    <string name="minimum_of_one_event">Minimum of one event.</string>
    <string name="max_num_of_events_reached">You have the maximum number of events.</string>
    <string name="CountDownText">00:00</string>
    <string name="start_button">START</string>
    <string name="routineSelected">Routine:</string>
    <string name="toolbar_text">Home</string>
    <string name="upcoming_overdue_dates">Upcoming/Overdue Dates</string>
    <string name="begin">BEGIN</string>
    <string name="select">home spinner</string>
    <string name="Period">statusTextView</string>
    <string name="course_professor_text">Professor:</string>
    <string name="add_course_fab_content_description">Button for adding course.</string>
    <string name="toolbar_label_courses_section">Courses</string>
    <string name="toolbar_label_assignments_section">Assignments</string>
    <string name="no_courses_message">There are no courses here!
        Select the add button at the bottom right of the screen to add a course.</string>
    <string name="toolbar_label_routines_section">Routines</string>
    <string name="no_assignments_message">There are no assignments here! Select the add button at the bottom right of the screen to add an assignment.</string>
    <string name="no_routines_message">There are no routines here! Select the add button at the bottom right of the screen to add a routine.</string>
    <string name="courses_add_edit_professor_hint">e.g. Tom Marco</string>
    <string name="courses_add_edit_description_label">Description:</string>
    <string name="course_add_edit_description_hint">Course description here.</string>
    <string name="courses_add_edit_professor_label">Professor:</string>
    <string name="courses_add_edit_title_hint">e.g. Comp 370</string>
    <string name="home_action_button_begin_label">BEGIN</string>
    <string name="home_action_button_resume_label">RESUME</string>
    <string name="routine_completion_message">Routine Completed!</string>
    <string name="home_action_button_reset_label">RESET</string>
    <string name="home_action_button_pause_label">PAUSE</string>
    <string name="initial_countdown_timer_value">00:00</string>
    <string name="toolbar_label_home_section">Home</string>
    <string name="message_upon_completing_routine">Routine Completed!</string>
    <string name="toolbar_label_options_section">Options</string>
</resources>