<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/routines_add_subsection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/add_routine_title"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="101dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_routine_title_hint"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/weekdaysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/add_routine_weekdays"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="181dp" />

    <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
        android:id="@+id/group_weekdays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:tbgChildSpacing="auto">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_for_sunday" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_for_monday" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/tues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_for_tuesday" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/wednes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/w_for_wednesday" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/thurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_for_thursday" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f_for_friday" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_for_saturday" />

    </com.nex3z.togglebuttongroup.MultiSelectToggleGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingRight="10dp"
            android:text="@string/add_routine_start_time"
            android:textSize="@dimen/standard_text_size"
            tools:layout_editor_absoluteX="208dp"
            tools:layout_editor_absoluteY="321dp" />

        <TextView
            android:id="@+id/start_hour_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/zero_hours_hint"
            android:textSize="@dimen/standard_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/increment_button_hour"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="+"
                android:textSize="14sp" />

            <Button
                android:id="@+id/decrement_button_hour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-" />
        </LinearLayout>


        <TextView
            android:id="@+id/start_minute_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/zero_minutes_hint"
            android:shadowColor="#000000"
            android:textSize="@dimen/standard_text_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/increment_button_minute"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="+"
                android:textSize="14sp" />

            <Button
                android:id="@+id/decrement_button_minute"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="-" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/total_time_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingRight="10dp"
            android:text="@string/add_routine_total_time"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="137dp" />

        <TextView
            android:id="@+id/total_time_textview_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:textSize="@dimen/standard_text_size" />

    </LinearLayout>


    <!--include recycler here-->


</LinearLayout>