<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/add_assignment_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_routine_title"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="69dp"
            tools:layout_editor_absoluteY="101dp" />

        <EditText
            android:id="@+id/add_assignment_title_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/assignment_title_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/add_assignment_course_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/period_course_text"
            android:textSize="@dimen/header2" />

        <Spinner
            android:id="@+id/add_assignment_course_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dropdown" />

    </LinearLayout>


    <CheckBox
        android:id="@+id/add_assignment_assign_due_date_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="hideOrShowDateTimeAndDaysPriorSelection"
        android:text="@string/add_assignment_due_date_confirmation_statement" />

    <LinearLayout
        android:id="@+id/add_assignment_due_time_and_days_prior_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_assignment_due_time_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_assignment_due_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/add_assignment_due_date_text"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="69dp"
                    tools:layout_editor_absoluteY="101dp" />

                <EditText
                    android:id="@+id/add_assignment_year_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/year_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:autofillHints="year" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash_symbol_between_day_month_year"/>

                <EditText
                    android:id="@+id/add_assignment_month_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/month_hint"
                    android:inputType="number"
                    android:maxLength="2"
                    android:autofillHints="month of year" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash_symbol_between_day_month_year"/>

                <EditText
                    android:id="@+id/add_assignment_day_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/day_hint"
                    android:inputType="number"
                    android:maxLength="2"
                    android:autofillHints="day of month" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_assignment_due_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/add_assignment_due_time_text"
                    android:textSize="@dimen/header2"
                    tools:layout_editor_absoluteX="208dp"
                    tools:layout_editor_absoluteY="321dp" />

                <TextView
                    android:id="@+id/add_assignment_due_hour_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/twenty_four_hours_hint"
                    android:textSize="@dimen/header2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/add_assignment_increment_button_hour"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:onClick="incrementDueHour"
                        android:text="@string/plus_sign" />

                    <Button
                        android:id="@+id/add_assignment_decrement_button_hour"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:onClick="decrementDueHour"
                        android:text="@string/minus_sign" />
                </LinearLayout>


                <TextView
                    android:id="@+id/add_assignment_due_minute_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/zero_minutes_hint"
                    android:textSize="@dimen/header2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/add_assignment_increment_button_minute"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:onClick="incrementDueMinute"
                        android:text="@string/plus_sign" />

                    <Button
                        android:id="@+id/add_assignment_decrement_button_minute"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:onClick="decrementDueMinute"
                        android:text="@string/minus_sign" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/add_assignment_notify_me_prior_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="hideOrShowDaysPriorSelection"
            android:text="@string/add_assignment_upcoming_date_confirmation_statement" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_assignment_days_prior_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_assignment_notify_me_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/add_assignment_notify_me_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_assignment_prior_days_value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_assignment_prior_days_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/header2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_assignment_prior_days_button_container"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/add_assignment_notify_me_text"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/add_assignment_prior_days_button_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_assignment_days_prior_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/add_assignment_prior_days_value"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/add_assignment_increment_button_prior_days"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:onClick="incrementPriorDays"
                    android:text="@string/plus_sign" />

                <Button
                    android:id="@+id/add_assignment_decrement_button_prior_days"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:onClick="decrementPriorDays"
                    android:text="@string/minus_sign" />

            </LinearLayout>

            <TextView
                android:id="@+id/add_assignment_days_prior_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/add_assignment_days_prior_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/add_assignment_prior_days_button_container"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/add_assignment_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_assignment_description_text"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="137dp" />

    <EditText
        android:id="@+id/add_assignment_description_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Describe the assignment."
        android:gravity="top|start"
        android:inputType="text"
        android:maxLength="48" />




    <CheckBox
        android:id="@+id/add_assignment_mark_as_complete_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="markAsComplete"
        android:text="@string/add_assignment_mark_assignment_completed_checkbox_text" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
            tools:layout_editor_absoluteY="125dp">

            <Button
                android:id="@+id/assignment_add_edit_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="transitionToAssignmentSection"
                android:text="@string/back_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/assignment_add_edit_done_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/assignment_add_edit_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addOrUpdateAssignment"
                android:text="@string/done_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/assignment_add_edit_back_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>



</LinearLayout>