<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="99dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="142dp"
                android:text="@string/routineSelected"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="285dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="142dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:prompt="@string/select"
                app:layout_constraintBottom_toTopOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/datesButton"
                android:layout_width="246dp"
                android:layout_height="45dp"
                android:layout_marginBottom="16dp"
                android:text="@string/upcoming_overdue_dates"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GoButton"
                app:layout_constraintVertical_bias="0.336" />

            <TextView
                android:id="@+id/countDownTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CountDownText"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:indeterminateOnly="false"
                android:progressDrawable="@drawable/circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/GoButton"
                android:layout_width="202dp"
                android:layout_height="53dp"
                android:layout_marginTop="24dp"
                android:onClick="buttonClicked"
                android:text="@string/begin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!--For Navigation drawer-->
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/Clear">

        <include
            layout="@layout/activity_navigation_drawer3"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>